<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="600dp"
    android:layout_height="400dp"
    android:orientation="vertical"
    android:background="@drawable/background_dialog">

    <TextView
        style="@style/dialogTextStyle"
        android:layout_marginTop="50dp"
        android:layout_marginStart="35dp"
        android:text="@string/information" />

    <LinearLayout
        style="@style/dialogLinearLayoutContentStyle"
        android:layout_marginTop="0dp"
        android:orientation="vertical">
        <TextView
            style="@style/dialogTextStyle"
            android:layout_marginTop="10dp"
            android:text="@string/res_factory_prompt_text"/>
        <TextView
            style="@style/dialogTextStyle"
            android:layout_marginTop="10dp"
            android:text="@string/res_factory_prompt_list1"/>
        <TextView
            style="@style/dialogTextStyle"
            android:text="@string/res_factory_prompt_list2" />
        <TextView
                style="@style/dialogTextStyle"
                android:text="@string/res_factory_prompt_list3"/>

    </LinearLayout>


    <LinearLayout
        style="@style/dialogLinearLayoutButtonStyle">

        <Button
            style="@style/ButtonStyle"
            android:text="@string/button_confirm"
            android:id="@+id/button_res_confirm"/>

        <Button
            style="@style/ButtonStyle"
            android:text="@string/button_cancel"
            android:id="@+id/button_res_cancel"/>
    </LinearLayout>

</LinearLayout>