<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical">

    <!--header部分-->
    <include layout="@layout/header_include" />

    <LinearLayout
        android:id="@+id/under_header"
        style="@style/mainStyle">

        <!--引入menu布局-->
        <include layout="@layout/menu_include" />

        <LinearLayout
            style="@style/fragmentStyle"
            android:id="@+id/layout_pppoe">

            <TextView
                style="@style/TitleStyle"
                android:text="@string/set_pppoe_title"/>

            <LinearLayout
                style="@style/staticIpLinearLayoutStyle"
                android:layout_marginTop="80dp">
                <TextView
                    style="@style/LayoutTagStyle"
                    android:layout_width="250dp"
                    android:text="@string/pppoe_username"/>
                <EditText
                    style="@style/editViewStyle"
                    android:id="@+id/pppoe_et_username" />

            </LinearLayout>

            <LinearLayout
                style="@style/staticIpLinearLayoutStyle"
                android:layout_marginTop="50dp">
                <TextView
                    style="@style/LayoutTagStyle"
                    android:layout_width="250dp"
                    android:text="@string/password"/>
                <EditText
                    style="@style/editViewStyle"
                    android:inputType="numberPassword"
                    android:id="@+id/pppoe_et_password" />

            </LinearLayout>


            <LinearLayout
                style="@style/staticIpLinearLayoutStyle"
                android:layout_marginTop="50dp"
                android:gravity="center_vertical|end">

                <Button
                    style="@style/ButtonStyle"
                    android:text="@string/button_confirm"
                    android:id="@+id/pppoe_btn_confirm" />
                <Button
                    style="@style/ButtonStyle"
                    android:layout_marginLeft="20dp"
                    android:text="@string/button_cancel"
                    android:id="@+id/pppoe_btn_cancel" />

            </LinearLayout>
        </LinearLayout>

    </LinearLayout>

</LinearLayout>