<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical">

    <!--header部分-->
    <include layout="@layout/header_include" />

    <LinearLayout
        android:id="@+id/under_header"
        style="@style/mainStyle">

        <!--引入menu布局-->
        <include layout="@layout/menu_include" />

        <LinearLayout
            android:id="@+id/static_layout"
            style="@style/fragmentStyle">

            <TextView
                style="@style/TitleStyle"
                android:background="@drawable/background_title"
                android:text="@string/set_static_ip" />

            <LinearLayout style="@style/LayoutStyle">

                <TextView
                    style="@style/LayoutTagStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/ip_address" />

                <EditText
                    android:id="@+id/static_et_ip"
                    style="@style/LayoutContentStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:focusable="true"
                    android:text="@string/net_default_text" />
            </LinearLayout>

            <ImageView
                style="@style/DividerStyle"
                android:background="@drawable/background_divider" />


            <LinearLayout style="@style/LayoutStyle">

                <TextView
                    style="@style/LayoutTagStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/subnet_mask" />

                <EditText
                    android:id="@+id/static_et_mask"
                    style="@style/LayoutContentStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:focusable="true"
                    android:text="@string/net_default_text" />
            </LinearLayout>

            <ImageView
                style="@style/DividerStyle"
                android:background="@drawable/background_divider" />

            <LinearLayout style="@style/LayoutStyle">

                <TextView
                    style="@style/LayoutTagStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/default_gateway" />

                <EditText
                    android:id="@+id/static_et_gateway"
                    style="@style/LayoutContentStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:focusable="true"
                    android:text="@string/net_default_text" />
            </LinearLayout>

            <ImageView
                style="@style/DividerStyle"
                android:background="@drawable/background_divider" />

            <LinearLayout style="@style/LayoutStyle">

                <TextView
                    style="@style/LayoutTagStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/main_dns" />

                <EditText
                    android:id="@+id/static_et_dns1"
                    style="@style/LayoutContentStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:focusable="true"
                    android:text="@string/net_default_text" />
            </LinearLayout>

            <ImageView
                style="@style/DividerStyle"
                android:background="@drawable/background_divider" />

            <LinearLayout style="@style/LayoutStyle">

                <TextView
                    style="@style/LayoutTagStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/backup_dns" />

                <EditText
                    android:id="@+id/static_et_dns2"
                    style="@style/LayoutContentStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:background="@null"
                    android:focusable="true"
                    android:text="@string/net_default_text" />
            </LinearLayout>

            <ImageView
                style="@style/DividerStyle"
                android:background="@drawable/background_divider" />

            <LinearLayout
                style="@style/LayoutStyle"
                android:layout_marginTop="10dp"
                android:gravity="center_horizontal|bottom">

                <Button
                    android:id="@+id/static_btn_confirm"
                    style="@style/ButtonStyle"
                    android:text="@string/button_confirm" />

                <Button
                    android:id="@+id/static_btn_cancel"
                    style="@style/ButtonStyle"
                    android:text="@string/button_cancel" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>