<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_main"
    android:orientation="vertical">

    <include layout="@layout/header_include" />

    <!--主体部分-->
    <LinearLayout
        android:id="@+id/under_header"
        style="@style/mainStyle">

        <!--引入menu布局-->
        <include layout="@layout/menu_include" />

        <LinearLayout
            android:id="@+id/layout_net_info"
            style="@style/fragmentStyle">

            <TextView
                style="@style/TitleStyle"
                android:background="@drawable/background_title"
                android:text="@string/network_information"
                android:id="@+id/netinfo_tv_title"/>

            <LinearLayout style="@style/LayoutStyle">

                <TextView
                    style="@style/LayoutTagStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/ip_address" />

                <TextView
                    android:id="@+id/netinfo_tv_ip"
                    style="@style/LayoutContentStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/net_default_text" />
            </LinearLayout>

            <ImageView
                style="@style/DividerStyle"
                android:background="@drawable/background_divider" />


            <LinearLayout style="@style/LayoutStyle">

                <TextView
                    style="@style/LayoutTagStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/subnet_mask" />

                <TextView
                    android:id="@+id/netinfo_tv_mask"
                    style="@style/LayoutContentStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/net_default_text" />
            </LinearLayout>

            <ImageView
                style="@style/DividerStyle"
                android:background="@drawable/background_divider" />

            <LinearLayout style="@style/LayoutStyle">

                <TextView
                    style="@style/LayoutTagStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/default_gateway" />

                <TextView
                    android:id="@+id/netinfo_tv_gateway"
                    style="@style/LayoutContentStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/net_default_text" />
            </LinearLayout>

            <ImageView
                style="@style/DividerStyle"
                android:background="@drawable/background_divider" />

            <LinearLayout style="@style/LayoutStyle">

                <TextView
                    style="@style/LayoutTagStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/main_dns" />

                <TextView
                    android:id="@+id/netinfo_tv_dns1"
                    style="@style/LayoutContentStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/net_default_text" />
            </LinearLayout>

            <ImageView
                style="@style/DividerStyle"
                android:background="@drawable/background_divider" />

            <LinearLayout style="@style/LayoutStyle">

                <TextView
                    style="@style/LayoutTagStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/backup_dns" />

                <TextView
                    android:id="@+id/netinfo_tv_dns2"
                    style="@style/LayoutContentStyle"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:text="@string/net_default_text" />
            </LinearLayout>

            <ImageView
                style="@style/DividerStyle"
                android:background="@drawable/background_divider" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>